--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
   <style>
     body {
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
       margin: 0;
       font-family: sans-serif;
       background: #f0f0f0;
+      transition: background 0.3s, color 0.3s;
+    }
+
+    .dark-mode {
+      background: #121212;
+      color: #f0f0f0;
     }
 
     .clock-container {
@@ -21,6 +28,12 @@
       padding: 20px 30px;
       border-radius: 8px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      transition: background 0.3s, color 0.3s;
+    }
+
+    .dark-mode .clock-container {
+      background: #1e1e1e;
+      box-shadow: 0 2px 10px rgba(255,255,255,0.1);
     }
 
     select {
@@ -35,6 +48,31 @@
       min-width: 120px;
       text-align: center;
     }
+
+    .theme-toggle {
+      margin-top: 20px;
+      padding: 8px 16px;
+      font-size: 1rem;
+      cursor: pointer;
+      border: 2px solid #000;
+      border-radius: 4px;
+      background-color: transparent;
+      color: #000;
+      transition: background 0.3s, color 0.3s, border 0.3s;
+    }
+
+    .dark-mode .theme-toggle {
+      color: #fff;
+      border-color: #fff;
+    }
+
+    .theme-toggle:hover {
+      background-color: rgba(0, 0, 0, 0.1);
+    }
+
+    .dark-mode .theme-toggle:hover {
+      background-color: rgba(255, 255, 255, 0.1);
+    }
   </style>
 </head>
 <body>
@@ -47,37 +85,41 @@
     </div>
   </div>
 
+  <button class="theme-toggle" id="theme-toggle">Tema Escuro</button>
+
   <script>
     const capitals = [
-      { name: 'Brasília', timezone: 'America/Sao_Paulo' },
-      { name: 'Londres', timezone: 'Europe/London' },
-      { name: 'Nova Iorque', timezone: 'America/New_York' },
-      { name: 'Tóquio', timezone: 'Asia/Tokyo' },
-      { name: 'Paris', timezone: 'Europe/Paris' },
-      { name: 'Cidade do México', timezone: 'America/Mexico_City' },
-      { name: 'Moscou', timezone: 'Europe/Moscow' },
-      { name: 'Pequim', timezone: 'Asia/Shanghai' },
-      { name: 'Cairo', timezone: 'Africa/Cairo' },
-      { name: 'Buenos Aires', timezone: 'America/Argentina/Buenos_Aires' },
-      { name: 'Canberra', timezone: 'Australia/Sydney' },
-      { name: 'Ottawa', timezone: 'America/Toronto' },
-      { name: 'Pretória', timezone: 'Africa/Johannesburg' },
-      { name: 'Nova Délhi', timezone: 'Asia/Kolkata' },
-      { name: 'Wellington', timezone: 'Pacific/Auckland' },
-      { name: 'Lisboa', timezone: 'Europe/Lisbon' },
+      { name: 'Adis Abeba', timezone: 'Africa/Addis_Ababa' },
+      { name: 'Ancara', timezone: 'Europe/Istanbul' },
       { name: 'Berlim', timezone: 'Europe/Berlin' },
+      { name: 'Brasília', timezone: 'America/Sao_Paulo' },
+      { name: 'Buenos Aires', timezone: 'America/Argentina/Buenos_Aires' },
+      { name: 'Cairo', timezone: 'Africa/Cairo' },
+      { name: 'Canberra', timezone: 'Australia/Sydney' },
+      { name: 'Cidade do México', timezone: 'America/Mexico_City' },
+      { name: 'Lisboa', timezone: 'Europe/Lisbon' },
+      { name: 'Londres', timezone: 'Europe/London' },
+      { name: 'Moscou', timezone: 'Europe/Moscow' },
+      { name: 'Nova Délhi', timezone: 'Asia/Kolkata' },
+      { name: 'Nova Iorque', timezone: 'America/New_York' },
+      { name: 'Ottawa', timezone: 'America/Toronto' },
+      { name: 'Paris', timezone: 'Europe/Paris' },
+      { name: 'Pequim', timezone: 'Asia/Shanghai' },
+      { name: 'Pretória', timezone: 'Africa/Johannesburg' },
       { name: 'Roma', timezone: 'Europe/Rome' },
       { name: 'Seul', timezone: 'Asia/Seoul' },
-      { name: 'Ancara', timezone: 'Europe/Istanbul' } // Istambul é usada para Turquia
-      // Você pode adicionar mais capitais aqui...
+      { name: 'Tóquio', timezone: 'Asia/Tokyo' },
+      { name: 'Wellington', timezone: 'Pacific/Auckland' }
     ];
 
     const select = document.getElementById('city-select');
     const hoursElem = document.getElementById('hours');
     const minutesElem = document.getElementById('minutes');
     const secondsElem = document.getElementById('seconds');
+    const toggleButton = document.getElementById('theme-toggle');
+    const body = document.body;
 
-    // Popula o dropdown com as capitais
+    // Popula o dropdown
     capitals.forEach(city => {
       const option = document.createElement('option');
       option.value = city.timezone;
@@ -117,9 +159,24 @@
       secondsElem.textContent = timeParts.second;
     }
 
-    // Inicia e atualiza a cada segundo
     updateClock();
     setInterval(updateClock, 1000);
+
+    // Alternância de tema com atualização de botão
+    toggleButton.addEventListener('click', () => {
+      body.classList.toggle('dark-mode');
+      updateThemeButton();
+    });
+
+    function updateThemeButton() {
+      const isDark = body.classList.contains('dark-mode');
+      toggleButton.textContent = isDark ? 'Tema Claro' : 'Tema Escuro';
+      toggleButton.style.color = isDark ? '#fff' : '#000';
+      toggleButton.style.borderColor = isDark ? '#fff' : '#000';
+    }
+
+    // Inicializa o texto e cor do botão
+    updateThemeButton();
   </script>
 </body>
 </html>
